--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/measurement-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/measurement/measurement-1.0.0"
-tag: "tag:weldx.bam.de:weldx/measurement/measurement-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/measurement/measurement-1.0.0"
 
 title: |
   Schema that describes a measurement
@@ -13,10 +13,10 @@ properties:
   data:
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.0.0"
 
   measurement_chain:
-    tag: "tag:weldx.bam.de:weldx/measurement/measurement_chain-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/measurement_chain-1.0.0"
 
 
 propertyOrder: [name, data, measurement_chain]
