--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/aws/design/weld_details-1.0.0"
-tag: "tag:weldx.bam.de:weldx/aws/design/weld_details-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/aws/design/weld_details-1.0.0"
 
 title: |
   <TODO DESCRIPTION>
@@ -14,8 +14,8 @@ properties:
     description: |
       AWS 3.0, p. 19 : "Detailed Description of mating configuration of two components, sufficient information for shop preparation of the components." TODO CLASS
     oneOf:
-      - tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/VGroove-1.0.0"
-      - tag: "tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/UGroove-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/VGroove-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/UGroove-1.0.0"
 
   weld_sizes:
     description: |
