--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/spatial_data-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/geometry/spatial_data-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/weldx/core/geometry/spatial_data-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.0.0"
 
 title: |
   Schema for a point cloud.
@@ -13,7 +13,7 @@ examples:
   -
     - A simple `SpatialData` with triangulation
     - |
-      !<tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.0.0>
         coordinates: !core/ndarray-1.0.0
           data:
           - [0.0, 0.0, 0.0]
