--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/graph/di_edge-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/core/graph/di_edge-1.0.0"
-tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0"
 
 title: |
   Graph edge.
@@ -13,16 +13,16 @@ examples:
   -
     - An edge pointing to node A.
     - |
-      !<tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
         direction: fwd
-        target_node: !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+        target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
           name: A
   -
     - An edge pointing from node B.
     - |
-      !<tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
         direction: bwd
-        target_node: !<tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0>
+        target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
           name: B
 
 type: object
@@ -31,7 +31,7 @@ properties:
     type: string
     enum: [fwd, bwd]
   target_node:
-    tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0"
   attributes:
     type: object
 
