--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_property_tag-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_property_tag-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/debug/test_property_tag-1.0.0"
-tag: "tag:weldx.bam.de:weldx/debug/test_property_tag-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/debug/test_property_tag-1.0.0"
 
 title: |
   Test wx_property_type validation.
@@ -12,5 +12,5 @@ description: |
   So far only one specific tag can be used.
 type: object
 additionalProperties: true # must be true to allow any property
-wx_property_tag: "tag:weldx.bam.de:weldx/time/timestamp-*"
+wx_property_tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-*"
 ...
