--- a/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/equipment/measurement_equipment-1.0.0"
-tag: "tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0"
 
 title: |
   A piece of measurement equipment.
@@ -14,16 +14,16 @@ examples:
   -
     - A analog to digital conversion equipment with a linear signal transformation.
     - |
-      !<tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0>
         name: Beckhoff ELM3002-0000
         sources: []
         transformations:
-        - &id004 !<tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0>
+        - &id004 !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0>
           name: AD conversion current measurement
           type_transformation: AD
-          error: !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
+          error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0>
             deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.01}
-          func: !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
+          func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.0.0>
             expression: a*x + b
             parameters:
               a: !unit/quantity-1.1.0 {unit: 1 / volt, value: 3276.8}
@@ -36,11 +36,11 @@ properties:
   sources:
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/measurement/source-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.0.0"
   transformations:
     type: array
     items:
-      tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.0.0"
+      tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.0.0"
 
 propertyOrder: [name, sources, transformations]
 required: [name]
