--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/measurement/error-1.0.0"
-tag: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0"
 
 title: |
   Measurement error description.
@@ -13,7 +13,7 @@ examples:
   -
     - An error representing a deviation of 0.1%.
     - |
-      !<tag:weldx.bam.de:weldx/measurement/error-1.0.0>
+      !<asdf://weldx.bam.de/weldx/tags/measurement/error-1.0.0>
         deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.1}
 
 type: object
