--- a/weldx/asdf/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
@@ -2,7 +2,7 @@
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
 id: "http://weldx.bam.de/schemas/weldx/process/CLOOS/spray_arc-1.0.0"
-tag: "tag:weldx.bam.de:weldx/process/CLOOS/spray_arc-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/process/CLOOS/spray_arc-1.0.0"
 
 title: |
   CLOOS spray arc process.
@@ -15,10 +15,10 @@ allOf:
         type: object
         properties:
           impedance:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
+            tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.0.0"
             wx_unit: "percent"
           characteristic:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
+            tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.0.0"
             wx_unit: "V/A"
         required: [impedance,characteristic]
 
