--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/connection-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/connection-1.0.0.yaml
@@ -1,7 +1,7 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "http://weldx.bam.de/schemas/weldx/aws/design/connection-1.0.0"
+id: "asdf://weldx.bam.de/weldx/schemas/aws/design/connection-1.0.0"
 tag: "asdf://weldx.bam.de/weldx/tags/aws/design/connection-1.0.0"
 
 title: |
