Disable changelog action for draft pull requests

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,4 +16,6 @@ jobs:
           submodules: true
       - name: Grep for PR number in CHANGELOG.md
         run: grep -P '\[[^\]]*#${{github.event.number}}[,\]]' CHANGELOG.md
-        if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-changelog-entry-needed') }}
+        if: |
+          !contains(github.event.pull_request.labels.*.name, 'no-changelog-entry-needed') &&
+          github.event.pull_request.draft == false
