--- a/setup.cfg
+++ b/setup.cfg
@@ -131,4 +131,6 @@ exclude_lines =
 
 [mypy]
 ignore_missing_imports = True
-exclude = asdf/, tests/
+exclude = 
+    weldx/asdf/, 
+    weldx/tests/
