--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -87,4 +87,4 @@ jobs:
         run: pip install mypy
       - name: run mypy
         run: |
-          mypy --install-types --non-interactive --config-file=setup.cfg
+          mypy .
