--- a/setup.cfg
+++ b/setup.cfg
@@ -130,7 +130,24 @@ exclude_lines =
     def _ipython_display_
 
 [mypy]
+files=weldx
 ignore_missing_imports = True
-exclude = 
-    weldx/asdf/, 
-    weldx/tests/,
+[mypy-weldx.asdf.*,weldx.tests.*]
+ignore_errors = True
+
+# fix current errors, remove module from ignore list, repeat
+[mypy-weldx.visualization.*]
+ignore_errors = True
+[mypy-weldx.transformations.*]
+ignore_errors = True
+[mypy-weldx.welding.*]
+ignore_errors = True
+[mypy-weldx.measurement.*]
+ignore_errors = True
+[mypy-weldx.geometry.*]
+ignore_errors = True
+[mypy-weldx.util.*]
+ignore_errors = True
+[mypy-weldx.config.*]
+ignore_errors = True
+
