Fix some errors in core module

--- a/setup.cfg
+++ b/setup.cfg
@@ -130,6 +130,8 @@ exclude_lines =
     def _ipython_display_
 
 [mypy]
+python_version = 3.9
+
 files=weldx
 ignore_missing_imports = True
 [mypy-weldx.asdf.*,weldx.tests.*]
