--- a/setup.cfg
+++ b/setup.cfg
@@ -134,6 +134,11 @@ python_version = 3.9
 
 files=weldx
 ignore_missing_imports = True
+strict_optional = False
+allow_redefinition = True
+show_error_context = True
+show_column_numbers = True
+
 [mypy-weldx.asdf.*,weldx.tests.*]
 ignore_errors = True
 
@@ -153,3 +158,9 @@ ignore_errors = True
 [mypy-weldx.config.*]
 ignore_errors = True
 
+# this is a workaround for an xarray related mypy bug
+# see https://github.com/python/mypy/pull/9495
+# and https://github.com/space-physics/msise00/commit/8b59a9383dd6fcc54b7dac74eb95a350308d7b62
+[mypy-xarray]
+follow_imports = skip
+ignore_errors = True
