--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -2,10 +2,15 @@ name: Changelog
 
 on:
   pull_request:
-    types: [labeled, unlabeled, opened, synchronize, reopened]
+    types: [labeled, unlabeled, opened, synchronize, reopened, ready_for_review]
+    branches:
+      - master
 
 jobs:
   changelog:
+    if: |
+      !contains(github.event.pull_request.labels.*.name, 'no-changelog-entry-needed') &&
+      github.event.pull_request.draft == false
     name: Confirm changelog entry
     runs-on: ubuntu-latest
     steps:
@@ -16,4 +21,3 @@ jobs:
           submodules: true
       - name: Grep for PR number in CHANGELOG.md
         run: grep -P '\[[^\]]*#${{github.event.number}}[,\]]' CHANGELOG.md
-        if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-changelog-entry-needed') }}
