--- a/setup.cfg
+++ b/setup.cfg
@@ -135,8 +135,10 @@ python_version = 3.9
 files=weldx
 ignore_missing_imports = True
 strict_optional = False
+pretty = True
 allow_redefinition = True
 show_error_context = True
+show_error_codes = True
 show_column_numbers = True
 
 [mypy-weldx.asdf.*,weldx.tests.*]
@@ -148,8 +150,6 @@ ignore_errors = True
 [mypy-weldx.transformations.*]
 ignore_errors = True
 [mypy-weldx.welding.*]
-ignore_errors = True
-[mypy-weldx.measurement.*]
 ignore_errors = True
 [mypy-weldx.geometry.*]
 ignore_errors = True
