add mypy to .typo-ci.yml

--- a/.typo-ci.yml
+++ b/.typo-ci.yml
@@ -33,6 +33,7 @@ excluded_words:
   - meshio
   - pytest-xdist
   - nbval
+  - mypy
   # matplotlib ----------------------------------
   - gca
   - mpl
