--- a/setup.cfg
+++ b/setup.cfg
@@ -38,12 +38,13 @@ setup_requires =
     setuptools_scm
 install_requires =
     numpy >=1.18
+    asdf >=2.8
     pandas >=1.0
     xarray >=0.15
     scipy >=1.4,!=1.6.0,!=1.6.1
     sympy >=1.6
     pint >=0.11
-    asdf >=2.8
+    pint-xarray
     bottleneck >=1.3
     boltons
     networkx >=2
