add basic time schema

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedelta-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timedelta-1.0.0.yaml
@@ -5,7 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/time/timedelta-1.0.0"
 tag: "tag:weldx.bam.de:weldx/time/timedelta-1.0.0"
 
 title: |
-  Represents an instance in time.
+  Represents a difference between two instances in time.
 
 examples:
   -
