--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/timestamp-1.0.0.yaml
@@ -5,8 +5,7 @@ id: "http://weldx.bam.de/schemas/weldx/time/timestamp-1.0.0"
 tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
 
 title: |
-  Represents an instance in time.
-type: object
+  Represents a single instance in time.
 
 examples:
   -
@@ -22,6 +21,7 @@ examples:
     - |
       !<tag:weldx.bam.de:weldx/time/timestamp-1.0.0> {value: '2020-01-01T12:00:00+01:00'}
 
+type: object
 properties:
   value:
     description: |
